--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "'www. + \n",
+    "vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
