--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
     }
    ],
    "source": [
-    "'www.' + vandelay.com' # 'www.vandelay.com'"
+    "'vandelay.com' www# 'www.vandelay.com'"
    ]
   },
   {
