--- a/index.ipynb
+++ b/index.ipynb
@@ -262,22 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-870b53e96339>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-10-2058d2cfd5fa>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-870b53e96339>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'www.' + vandelay.com' # 'www.vandelay.com'\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-2058d2cfd5fa>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'vandelay.com' + 'www.''# 'www.vandelay.com'\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "'vandelay.com' www# 'www.vandelay.com'"
+    "'vandelay.com' + 'www.''# 'www.vandelay.com'"
    ]
   },
   {
